# laf

./: CMakeLists.txt  LICENSE.txt
base/: 24bits.h  base64.cpp  base64.h  base64_tests.cpp  buffer.h  cfile.cpp  cfile.h  chrono.cpp  chrono.h  concurrent_queue.h  convert_to.cpp  convert_to.h  count_bits.h  debug.h  disable_copying.h  dll.h  dll_unix.h  dll_win32.h  enum_flags.h  enum_flags_tests.cpp  errno_string.cpp  errno_string.h  exception.cpp  exception.h  file_content.cpp  file_content.h  file_handle.cpp  file_handle.h  fs.cpp  fs.h  fs_tests.cpp  fs_unix.h  fs_win32.h  gcd.h  hex.h  launcher.cpp  launcher.h  log.cpp  log.h  mask_shift.h  (+61 more)
dlgs/: CMakeLists.txt
dlgs/win/: dlgs_process.cpp  file_dialog_win_safe.cpp
examples/: allevents.cpp  complextextlayout.cpp  custom_window.cpp  drag_and_drop.cpp  floating_window.cpp  hello_laf.cpp  listfonts.cpp  multiple_windows.cpp  panviewport.cpp  shader.cpp  show_platform.cpp
ft/: algorithm.h  face.h  hb_face.h  hb_shaper.h  lib.cpp  lib.h  stream.cpp  stream.h
gfx/: border.h  border_io.h  clip.h  clip_tests.cpp  color.h  color_space.cpp  color_space.h  fwd.h  hsl.cpp  hsl.h  hsl_tests.cpp  hsv.cpp  hsv.h  hsv_tests.cpp  matrix_none.h  matrix_skia.h  packing_rects.cpp  packing_rects.h  packing_rects_tests.cpp  path_none.h  path_skia.h  point.h  point_io.h  rect.h  rect_io.h  rect_tests.cpp  region_pixman.cpp  region_pixman.h  region_skia.cpp  region_skia.h  region_tests.cpp  region_win.cpp  region_win.h  rgb.cpp  rgb.h  rgb_tests.cpp  size.h  size_io.h
os/: CMakeLists.txt  app_mode.h  capabilities.h  color_space.h  (+33 more)
(+109 files in other folders)
